src/tools/androiddeployqt/main.cpp
@@ -1807,10 +1807,15 @@ bool updateLibsXml(Options *options)
 
         QStringList localLibs;
         localLibs = options->localLibs[it.key()];
+        const QString archSuffix = it.key() + ".so"_L1;
+
         const QList<QtDependency>& deps = options->qtDependencies[it.key()];
-        auto notExistsInDependencies = [&deps] (const QString &lib) {
+        auto notExistsInDependencies = [&deps, archSuffix] (const QString &libName) {
+            QString lib = QFileInfo(libName).fileName();
+            if (lib.endsWith(archSuffix))
+                lib.chop(archSuffix.length());
             return std::none_of(deps.begin(), deps.end(), [&lib] (const QtDependency &dep) {
-                return QFileInfo(dep.absolutePath).fileName() == QFileInfo(lib).fileName();
+                return QFileInfo(dep.absolutePath).fileName().contains(lib);
             });
         };
 
